welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:6: error: value et is not a member of Boolean
  } else if (a%3==0 et a%5==0) {
                    ^